sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: type int
val x:int=GetNombreValeurs():Int} 
      ^AlgBubbleSort1:3: error: not found: value GetNombreValeurs
val x:int=GetNombreValeurs():Int} 
          ^