sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
val x:int=GetNombreValeurs():Int}